# svg_polish

./: .gitignore  CHANGELOG.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
.opencode/agents/: polish.md
.opencode/commands/: clean.md  document.md  optimize.md  test.md
.ralph/: ralph-history.json  ralph-loop.state.json
PLAN/: 01-code-cleanup.md  02-documentation.md  03-optimization.md  04-testing.md  05-type-safety.md  06-simplification.md  README.md
docs/: api.md  architecture.md  cli.md  configuration.md  contributing.md  getting-started.md  index.md  migration.md  optimizations.md  performance.md  security.md
scripts/: check_scour_baseline.py
src/svg_polish/: __init__.py  cli.py  colors.py  constants.py  css.py  dom.py  exceptions.py  gradients.py  groups.py  ids.py  namespaces.py  optimizer.py  options.py  serialize.py  stats.py  style.py  svg_regex.py  svg_transform.py  types.py
src/svg_polish/passes/: __init__.py  attributes.py  comments.py  defaults.py  length.py  path.py  rasters.py  sizing.py  transform.py
tests/: conftest.py  test_cli.py  test_cli_flags.py  test_concurrency.py  test_correctness.py  test_coverage.py  test_css.py  test_exceptions.py  test_fixtures.py  test_float_engine.py  test_golden.py  test_modern_api.py  test_optimizer.py  test_options.py  test_parsers.py  test_performance.py  test_properties.py  test_public_api.py  test_remaining_coverage.py  test_robustness.py  test_security.py
tests/benchmarks/: conftest.py  test_perf.py
