[project]
name = "svg-polish"
version = "1.0.0"
description = "A fast, lossless SVG optimizer that removes unnecessary data and produces clean, lightweight vector graphics."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Giacomo Battaglia", email = "giacomo@battaglia.dev" },
]
keywords = ["svg", "optimizer", "vector", "graphics", "minifier", "cleaner"]
dependencies = [
    "defusedxml>=0.7.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/g-battaglia/svg_polish"
Repository = "https://github.com/g-battaglia/svg_polish"
Issues = "https://github.com/g-battaglia/svg_polish/issues"
Changelog = "https://github.com/g-battaglia/svg_polish/blob/main/CHANGELOG.md"

[project.scripts]
svg-polish = "svg_polish.optimizer:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svg_polish"]

[tool.poe.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=svg_polish --cov-report=term-missing --cov-report=html"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
typecheck = "mypy src/svg_polish/"
bench = "pytest tests/benchmarks/ --benchmark-only --benchmark-save=baseline"
bench-compare = "pytest tests/benchmarks/ --benchmark-only --benchmark-compare=baseline --benchmark-compare-fail=mean:5%"
check.sequence = [
    { ref = "lint" },
    { ref = "format-check" },
    { ref = "typecheck" },
    { ref = "test" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "benchmark: performance benchmarks (slow, opt-in via 'pytest --benchmark-only' or 'poe bench')",
]
addopts = "-m 'not benchmark'"

[tool.coverage.run]
source = ["svg_polish"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Legacy code inherited from Scour — style lints are not worth the churn
"src/svg_polish/optimizer.py" = ["UP", "SIM", "E501", "B", "F841"]
"src/svg_polish/svg_regex.py" = ["UP", "SIM", "E501"]
"src/svg_polish/svg_transform.py" = ["UP", "SIM", "E501"]
# Test files inherited from Scour
"tests/test_optimizer.py" = ["UP", "SIM", "E501", "B", "F841", "I"]
"tests/test_public_api.py" = ["B017"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "poethepoet>=0.34",
    "hypothesis>=6.152.1",
    "types-defusedxml>=0.7",
]
